--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: os_detect
-version: 1.0.0
+version: 1.1.0-nullsafety.0
 description: Platform independent OS detection.
 homepage: https://github.com/dart-lang/os_detect
 environment:
-  sdk: ">=2.8.0 <3.0.0"
+  sdk: '>=2.12.0-0 <3.0.0'
 dev_dependencies:
-  pedantic: ^1.9.0
-  test: ^1.15.0
+  pedantic: ^1.10.0-nullsafety
+  test: ^1.16.0-nullsafety
