--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 2.0.0
 description: Platform independent OS detection.
 homepage: https://github.com/dart-lang/os_detect
 environment:
-  sdk: '>=2.12.0-0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 dev_dependencies:
   pedantic: ^1.11.0
   test: ^1.16.8
