--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,9 +1,8 @@
 # Copyright (c) 2020, the Dart project authors.  Please see the AUTHORS file
 # for details. All rights reserved. Use of this source code is governed by a
 # BSD-style license that can be found in the LICENSE file.
-include: package:pedantic/analysis_options.1.9.0.yaml
+include: package:lints/recommended.yaml
+
 analyzer:
-  errors:
-    annotate_overrides: ignore
-    prefer_single_quotes: ignore
-    use_function_type_syntax_for_parameters: ignore
+  strong-mode:
+    implicit-casts: false
