--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ description: Platform independent OS detection.
 homepage: https://github.com/dart-lang/os_detect
 environment:
   sdk: '>=2.12.0 <3.0.0'
+
 dev_dependencies:
-  pedantic: ^1.11.0
+  lints: ^1.0.0
   test: ^1.16.8
