Allow compilation environment variables to override the platform string.
The `dart.os.name` and `dart.os.version` compilation environment variables,
if set, completely overrides the values of the global
`operatingSystem` and `operatingSystemVersion` getters.

By having a constant first priority, setting those values may allow compilers
to recognize the value as being a constant, and therefore tree-shake more
code. The value should be set to something that actually *works*
for the platform being compiled to.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: os_detect
-version: 2.0.0
-description: Platform independent OS detection.
+version: 2.1.0
+description: Platform independent operating system detection and checking.
 homepage: https://github.com/dart-lang/os_detect
 environment:
   sdk: '>=2.12.0 <3.0.0'
