Migrate from no-implicit-casts to strict-casts

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,5 +4,5 @@
 include: package:lints/recommended.yaml
 
 analyzer:
-  strong-mode:
-    implicit-casts: false
+  language:
+    strict-casts: true
