--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: os_detect
-version: 2.0.1
+version: 2.0.2-dev
 description: Platform independent OS detection.
 repository: https://github.com/dart-lang/os_detect
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.18.0 <3.0.0'
 
 dev_dependencies:
-  lints: ^1.0.0
+  lints: ^2.0.0
   test: ^1.16.8
