Use the VM's "platform-const" feature to achieve tree-shaking.
By using the VM's `@pragma("vm:platform-const")` annotation,
and `Platform` members annotated with it, ensure that the
`isLinux` and `operatingSystem` values are also known at compile-time,
even if they cannot be annotated as platform-constants.

This is done by having a class per known operating system,
and making sure to only create instances of those classes
guarded by platform-constants (or real constants), so that
if nobody goes out of their way to create a custom instance,
which they should only do for testing, all but one of those
platform-specific classes can be tree-shaken.

At that point, checks like `is MacOS` (one of the types)
can be statically determined to be false if `MacOS` was tree-shaken,
and `.id` can be statically resolved to a single final variable
with a known value.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -14,42 +14,56 @@ linter:
   - avoid_catching_errors
   - avoid_classes_with_only_static_members
   - avoid_dynamic_calls
+  - avoid_empty_else
   - avoid_private_typedef_functions
   - avoid_redundant_argument_values
+  - avoid_relative_lib_imports
   - avoid_returning_null_for_future
   - avoid_returning_this
+  - avoid_shadowing_type_parameters
+  - avoid_types_as_parameter_names
   - avoid_unused_constructor_parameters
   - avoid_void_async
-  - cancel_subscriptions
+  - await_only_futures
+  - camel_case_extensions
+  - collection_methods_unrelated_type
   - comment_references
+  - curly_braces_in_flow_control_structures
   - directives_ordering
-  - join_return_with_assignment
+  - empty_catches
+  - file_names
+  - hash_and_equals
   - lines_longer_than_80_chars
   - literal_only_boolean_expressions
   - missing_whitespace_between_adjacent_strings
   - no_adjacent_strings_in_list
+  - no_duplicate_case_values
   - no_runtimeType_toString
   - omit_local_variable_types
   - only_throw_errors
   - package_api_docs
   - prefer_asserts_in_initializer_lists
-  - prefer_const_constructors
   - prefer_const_declarations
-  - prefer_expression_function_bodies
-  - prefer_final_locals
+  - prefer_generic_function_type_aliases
+  - prefer_is_empty
+  - prefer_is_not_empty
+  - prefer_iterable_whereType
   - prefer_relative_imports
   - prefer_single_quotes
+  - prefer_typing_uninitialized_variables
+  - provide_deprecation_message
   - sort_pub_dependencies
   - test_types_in_equals
   - throw_in_finally
   - type_annotate_public_apis
   - unawaited_futures
-  - unnecessary_await_in_return
   - unnecessary_lambdas
+  - unnecessary_overrides
   - unnecessary_parenthesis
-  - unnecessary_raw_strings
   - unnecessary_statements
-  - use_if_null_to_convert_nulls_to_bools
+  - unrelated_type_equality_checks
+  - use_is_even_rather_than_modulo
+  - void_checks
   - use_raw_strings
-  - use_string_buffers
-  - use_super_parameters
+
+
