--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,11 @@ description: Platform independent OS detection.
 repository: https://github.com/dart-lang/os_detect
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ^3.0.0
 
 dependencies:
   meta: ^1.9.0
 
 dev_dependencies:
   lints: ^2.0.0
-  test: ^1.16.8
+  test: ^1.24.0
