--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: os_detect
-version: 2.0.2-dev
+version: 2.0.2-wip
 description: Platform independent OS detection.
 repository: https://github.com/dart-lang/os_detect
 
@@ -10,5 +10,5 @@ dependencies:
   meta: ^1.9.0
 
 dev_dependencies:
-  lints: ^2.0.0
+  dart_flutter_team_lints: ^2.0.0
   test: ^1.24.0
